# testTask

./: CMakeLists.txt  Dockerfile  JpegUtils.cpp  JpegUtils.hpp  README.md  main.cpp
src/: CMakeLists.txt  JpegUtils.cpp  JpegUtils.hpp  log.h  main.cpp
